configsync/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels: 
    # version must match the ASM control plane revision
    # istio.io/rev: asm-1104-14
    istio.io/rev: asm-110
