configsync/test/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: test
spec:
  outboundTrafficPolicy:
    # allow egress only to known destinations
    mode: REGISTRY_ONLY
